# cookiecutter-pyodide-react

./: .gitignore  LICENSE  README.md  cookiecutter.json  index.html  package-lock.json  package.json  vite.config.js
hooks/: post_gen_project.sh
src/: App.jsx  packages.json
src/libdemo/: libdemo.py  pyproject.toml
{{ cookiecutter.name }}/: index.html  vite.config.js
{{ cookiecutter.name }}/src/: App.jsx
{{cookiecutter.name}}/: .gitignore  README.md  package.json
{{cookiecutter.name}}/src/: packages.json
{{cookiecutter.name}}/src/{{ cookiecutter.name_py }}/: pyproject.toml  {{ cookiecutter.name_py }}.py
