[tool.poetry]
name = "{{ cookiecutter.name_py }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
version = "{{ cookiecutter.version }}"
license = "{{ cookiecutter.license }}"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
